--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 num-complex = "0.4"
 wasm-bindgen = "0.2"
+spfunc = "0.1"
+getrandom = { version = "0.2", features = ["js"] }
 
 [lib]
 crate-type = ["cdylib"]
