--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -10,6 +10,7 @@ num-complex = "0.4"
 wasm-bindgen = "0.2"
 spfunc = "0.1"
 getrandom = { version = "0.2", features = ["js"] }
+colorous = "1.0.8"
 
 [lib]
 crate-type = ["cdylib"]
